--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -10,7 +10,8 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["content.js"]
+            "js": ["pako.min.js", "content.js"],
+            "run_at": "document_idle"
         }
     ]
 }
